Fixed .row overflow and added function to fix audio bug

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,6 +32,10 @@ body {
     }
 }
 
+.row {
+    margin: 0;
+}
+
 .nav-container {
     margin-top: 10px;
     margin-bottom: 10px;
